--- a/src/app/order-progress/pages/client-progress/client-progress.component.html
+++ b/src/app/order-progress/pages/client-progress/client-progress.component.html
@@ -1,4 +1,14 @@
+
+<div class="flex justify-end items-start absolute right-0 mr-10 mt-5">
+  <h1 class="text-xl font-bold mr-3 -mt-1">Regresar</h1>
+  <button>
+    <img src="./assets/img/botonSalir.png" alt="Logo" class="h-6 mr-1" [routerLink]="['/client/order-list-client']" style="cursor: pointer;">
+  </button>
+</div>
+
 <div class="flex lg:flex-row flex-col lg:mt-20 lg:mb-20 mb-14">
+
+
 
   <!--- Primera columna --->
   <div class="flex flex-col w-full lg:items-center lg:w-1/2 lg:ml-14 lg:-mr-32 mt-8">
