--- a/src/app/mechanic-view/pages/create-order/create-order.component.html
+++ b/src/app/mechanic-view/pages/create-order/create-order.component.html
@@ -19,7 +19,7 @@
           class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4  mb-2 lg:mb-0"
           (input)="onInputChange($event)">
         <button type="button"
-          class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg:mt-0"
+          class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-3 lg:mb-0 mt-2 lg:mt-0"
           style="background: #F7941F" (click)="buscarPorPlaca()">Buscar</button>
       </div>
 
@@ -108,12 +108,12 @@
 
       <!---tamaño xs--->
 
-      <div class="bg-white p-6 rounded-lg text-black  mb-5 lg:hidden">
+      <div class="bg-white p-4 rounded-lg text-black mb-5 lg:hidden" >
 
-        <div *ngFor="let item of selectedServices; let i = index" class="flex lg:flex-row flex-col mb-3">
+        <div *ngFor="let item of selectedServices; let i = index" class="flex lg:flex-row flex-col">
 
           <select [(ngModel)]="item.tipo_servicio"
-            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-3 lg:mb-0">
             <option value="" disabled selected>Tipo de servicio</option>
             <option *ngFor="let tipo of tipoServicio">{{ tipo }}</option>
           </select>
@@ -131,7 +131,7 @@
           </select>
 
           <select [(ngModel)]="item.servicioMecanico.mecanicoId"
-            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-0">
+            class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 lg:mb-0">
             <option value="0" disabled selected>Mecanico</option>
             <ng-container *ngIf="item.servicioMecanico.servicioId">
               <option *ngFor="let mecanico of obtenerMecanicosPorServicio(item.servicioMecanico.servicioId)"
@@ -142,28 +142,26 @@
 
           <div class="flex lg:flex-row flex-col lg:w-96 lg:mx-auto">
             <button *ngIf="selectedServices.length > 1" (click)="removeRow(i)"
-              class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg: lg:hidden"
+              class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-4 lg:mb-0 mt-2 lg: lg:hidden"
               style="background: #D9D9D9">Eliminar servicio</button>
           </div>
         </div>
       </div>
 
-      <div class="flex lg:flex-row flex-col justify-center lg:ml-2 lg:mr-48 ml-5 mr-5">
+      <div class="flex lg:flex-row flex-col justify-center">
         <div *ngFor="let item of selectedServices; let i = index" class="flex lg:flex-row flex-col">
           <button *ngIf="i === selectedServices.length - 1" (click)="addRow()"
-            class="text-xl text-black rounded-xl px-8 py-3 font-semibold inline-block lg:mb-0 lg:mt-0"
+            class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-3 lg:mb-0 lg:mr-20 lg:mt-0"
             style="background: #F7941F;">Agregar servicio</button>
         </div>
-      </div>
-
-
-
-
-      <div class="mx-auto mb-2">
         <button type="button"
-          class="text-xl text-black rounded-xl px-8 py-3 font-semibold inline-block mb-1 lg:mb-0 mt-3 lg:mt-0"
-          (click)="openModal()" style="background: #F7941F">Registrar</button>
+                class="text-xl text-black rounded-xl px-10 py-2 font-semibold inline-block mb-3 lg:mb-0 mt-2 lg:mt-0"
+                (click)="openModal()" style="background: #F7941F">Registrar</button>
+
       </div>
+
+
+
     </div>
   </div>
 </div>
