--- a/src/app/order-progress/pages/employee-progress/employee-progress.component.html
+++ b/src/app/order-progress/pages/employee-progress/employee-progress.component.html
@@ -1,3 +1,10 @@
+<div class="flex justify-end items-start absolute right-0 mr-10 mt-5">
+  <h1 class="text-xl font-bold mr-3 -mt-1">Regresar</h1>
+  <button>
+    <img src="./assets/img/botonSalir.png" alt="Logo" class="h-6 mr-1" [routerLink]="['/employee/order-list-employee']" style="cursor: pointer;">
+  </button>
+</div>
+
 <div class="flex lg:flex-row flex-col lg:mt-28 lg:mb-32 mb-14">
 
   <!--- Primera columna --->
