feature/progress-bar-updated

--- a/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
+++ b/src/app/mechanic-view/pages/workshop-services/workshop-services.component.html
@@ -62,7 +62,7 @@
     <!-- Botón de guardar -->
     <div class="flex items-center justify-center mr-24 ml-24">
       <button type="button" class="text-xl text-black rounded-xl px-10 py-3 font-semibold inline-block mt-4"
-        style="background: #F7941F" [routerLink]="['/workshop/workshop-info']" (click)="closeModal()">Aceptar</button>
+        style="background: #F7941F" [routerLink]="['/workshop/workshop-mechanics']" (click)="closeModal()">Aceptar</button>
     </div>
   </div>
 </div>
