--- a/src/app/order-progress/pages/client-progress/client-progress.component.html
+++ b/src/app/order-progress/pages/client-progress/client-progress.component.html
@@ -1,3 +1,9 @@
+<div class="flex justify-end items-start absolute right-0 mr-10 mt-5">
+  <h1 class="text-xl font-bold mr-3 -mt-1">Regresar</h1>
+  <button>
+    <img src="./assets/img/botonSalir.png" alt="Logo" class="h-6 mr-1" [routerLink]="['/client/order-list-client']" style="cursor: pointer;">
+  </button>
+</div>
 
 <div class="flex justify-end items-start absolute right-0 mr-10 mt-5">
   <h1 class="text-xl font-bold mr-3 -mt-1">Regresar</h1>
@@ -26,7 +32,7 @@
         <h2 class="font-bold text-lg">Bandeja de Chat</h2>
       </div>
       <div class="p-4 flex items-center justify-between" style="background: #D9D9D9;" *ngFor="let servicio of orders.servicios">
-        <p>{{ servicio.nombreServicio }}</p>
+        <p>{{ servicio.servicio.nombre }}</p>
         <button (click)="openChat()">
           <img src="./assets/img/iconoChat.png" alt="Logo" class="h-6 mr-1" style="cursor: pointer;">
 
