--- a/src/app/order-progress/pages/employee-progress/employee-progress.component.html
+++ b/src/app/order-progress/pages/employee-progress/employee-progress.component.html
@@ -47,7 +47,7 @@
       </div>
     </div>
 
-    <app-progress-bar [mecanicoPaso]="mecanicoPaso" [pasos]="datosOrden.pasos" />
+    <app-progress-bar [mecanicoPaso]="mecanicoPaso" [pasos]="datosOrden.pasos" [estatuto]="datosOrden.estadoServicio" />
 
   </div>
 
