--- a/src/app/order-progress/pages/progress-bar/progress-bar.component.html
+++ b/src/app/order-progress/pages/progress-bar/progress-bar.component.html
@@ -1,3 +1,12 @@
+<div class="items-start lg:ml-0 ml-5">
+  <p class="text-lg "><strong>Servicio: </strong>{{ datosOrden.servicio.nombre }}</p>
+  <p class="text-lg "><strong>Mecánico: </strong>{{ datosOrden.mecanico.nombre }}</p>
+  <div class="flex">
+    <p class="text-lg"><strong>Estado:</strong>&nbsp;</p>
+    <p class="text-lg {{ getColorClass(datosOrden.estadoServicio) }}">{{ datosOrden.estadoServicio }}</p>
+  </div>
+</div>
+
 @if(pasos.length>=8){
   <div class="main p-4 overflow-x-auto lg:ml-0 lg:mr-0 ml-5 mr-5">
     <ul>
@@ -100,29 +109,28 @@
 <div class="main items-center">
   <div class="flex lg:flex-row flex-col mt-10">
 
-    @if(showButtons && currentServiceIndex < pasos.length - 1){
-      @if (finishedOrder){
+    @if (datosOrden.estadoServicio === 'En Proceso' || datosOrden.estadoServicio === 'EN_PROCESO' ){
+      @if (currentServiceIndex < pasos.length - 1){
         <div class="boton flex justify-center mt-5">
           <button type="submit" class="text-black font-semibold inline-block" (click)="nextStep()">Siguiente Paso</button>
-        </div>
+        </div>      
       }
     }
-    @if(showButtons && currentServiceIndex < pasos.length - 1 || showButtons && currentServiceIndex === pasos.length - 1 ){
-      @if (finishedOrder){
+    
+    @if (datosOrden.estadoServicio === 'En Proceso' || datosOrden.estadoServicio === 'EN_PROCESO'){
       <div class="botonfn flex justify-center mt-5">
         <button type="submit" class="text-black font-semibold inline-block" (click)="openModal()" >Finalizar Orden</button>
       </div>
-      }
     }
-    @if(!showButtons){
+    
+    @if(datosOrden.estadoServicio === 'En Espera'  || datosOrden.estadoServicio === 'EN_ESPERA') {
       <div class="boton flex justify-center mt-5">
         <button type="submit" class="text-black font-semibold inline-block" (click)="startOrder()">Empezar Orden</button>
       </div>
     }
+    
   </div>
 </div>
-
-
 
 @if (showModal){
 
