--- a/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
+++ b/src/app/mechanic-view/pages/workshop-mechanics/workshop-mechanics.component.html
@@ -123,7 +123,13 @@
           }
         </span>
         </div>
-
+        <div class="text-xl w-full bg-white border border-gray-300 rounded-xl px-3 py-2 focus:outline-none focus:border-blue-400 flex-grow mr-4 mb-2 lg:mb-4 mt-4">
+          <input type="text" placeholder="Número de contacto"
+                 name="telefono" [(ngModel)]="newMechanic.telefono"
+                 (keypress)="onKeyPress($event)"
+                 maxlength="9"
+                 required>
+        </div>
       </div>
 
       <p class="text-xl mb-6 font-semibold ">Servicios del Mecánico:</p>
