--- a/src/app/mechanic-view/pages/order-list/order-list.component.html
+++ b/src/app/mechanic-view/pages/order-list/order-list.component.html
@@ -62,7 +62,7 @@
           <td class="border-gray-400 font-semibold py-4 {{ getColorClass(vehicle.estado) }}" style="width: 20%;">{{
             vehicle.estado }}</td>
           <td class="border-gray-400 py-4" style="width: 20%;">
-            <button class="text-white px-2 py-1 rounded-lg" (click)="detailOrder(vehicle.placa)" style="background: #F7941F">☰</button>
+            <button class="text-white px-2 py-1 rounded-lg" (click)="detailOrder(vehicle.id)" style="background: #F7941F">☰</button>
           </td>
         </tr>
       </tbody>
