--- a/src/app/order-progress/pages/client-progress/client-progress.component.html
+++ b/src/app/order-progress/pages/client-progress/client-progress.component.html
@@ -36,7 +36,7 @@
   </div>
 
   <div class="flex flex-col w-full lg:w-1/2 lg:mr-48 lg:mt-0 mt-10">
-    <app-multi-progress-bar [orderServices]="orders.servicios" />
+    <!-- <app-multi-progress-bar [orderServices]="orders.servicios" /> -->
 
   </div>
 
